# chipicopwn

./: CMakeLists.txt  LICENSE  README.md
payloads/: Makefile  boot_from_usb.S  boot_from_usb.h  memdump_over_uart.c  memdump_over_uart.h  poc_step1.S  poc_step1.h  poc_step2.S  poc_step2.h
src/: chipicopwn-disk.h  msc_disk.c  usb_descriptors.c
